--- a/src/main/resources/templates/panelUsuario.html
+++ b/src/main/resources/templates/panelUsuario.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
+    <header>
 
+    </header>
+
+
+
+    <footer class="pie">
+
+    </footer>
+    <script src="js/heafoo.js"></script>
 </body>
 </html>
