--- a/src/main/resources/templates/Buscador01.html
+++ b/src/main/resources/templates/Buscador01.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"  lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ProSkillFinder</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" th:href="@{/css/estilos2.css}">
-    </head>
+<html lang="es" xmlns:th="http://www.thymeleaf.org" >
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>ProSkillFinder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/estilos2.css">
+</head>
+
 <body>
 
 <nav th:replace="fragments/navbar::nav"></nav>
@@ -41,13 +43,13 @@
     <ul>
         <th:block th:each="proveedor : ${proveedores}">
             <div class="col-md-4">
-                <div class="card">
-                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="card-img-top" alt="Proveedor 1">
-                    <div class="card-body">
-                        <h5 th:text="${proveedor.nombre}">nombre:</h5>
-                        <p class="card-text" th:text="${proveedor.direccion}">direccion:</p>
-                        <p class="card-text" th:text="${proveedor.honorarioHora}">honorarios por hora:</p>
-                        <p class="card-text">Cantidad de estrellas: 5</p>
+                <div class="card" style="background-color: #000; width: 300px;">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="card-img-top" alt="Proveedor 1">
+                    <div class="card-body" >
+                        <h5 style="font-weight: bold; color: white;">Nombre:  <span class="card-text" th:text="${proveedor.nombre}"></span></h5>
+                        <h5 style="color: white;">Direccion:  <span class="card-text" th:text="${proveedor.direccion}"></span></h5>
+                        <h5 style="color: white;">Honorarios por hora:  <span class="card-text" th:text="${proveedor.honorarioHora}"></span></h5>
+                        <h5 class="card-text" style="color: white;">Cantidad de estrellas:  5</h5>
                     </div>
                 </div>
             </div>
@@ -56,11 +58,11 @@
 </div>
 
 
-<div th:if="${#lists.isEmpty(proveedores)}">
+<div class="row justify-content-center" th:if="${#lists.isEmpty(proveedores)}">
     <div class="col-md-4">
-        <div class="card">
+        <div class="card" style="background-color: #000; height: 62px;">
             <div class="card-body">
-                <p>No se encontraron proveedores para este rubro.</p>
+                <p class="row justify-content-center" style="font-weight: bold; color: white;">No se encontraron proveedores para este rubro</p>
             </div>
         </div>
     </div>
@@ -68,7 +70,7 @@
 
 <br>
 
-<div class="imagen-enmarcada">
+<div class="imagen-enmarcada" th:if="${#lists.isEmpty(proveedores)}">
     <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
 </div>
 
@@ -84,7 +86,6 @@
     <div th:replace="fragments/footer::foot"></div>
     <div th:replace="fragments/redesS::red_soc"></div>
 </footer>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
