--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -7,28 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos2.css">
 </head>
-<body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand">
-            <img src="logos/casacasa.png"  width="30" height="30" class="d-inline-block align-top">
-        </a>
-        <a class="navbar-brand" href="logos/casacasa.png"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" href="/">Inicio</a>
-                <a class="nav-link" href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero">Buscar</a>
-               <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
-                <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
-                <a class="nav-link" href="/login">Login</a>
-            </div>
-          </div>
-      </div>
-  </nav>
+<body>
+<nav th:replace="fragments/navbar::nav"></nav>
+
 <h1>ProSkillFinder</h1>
 <div class="container2">
     <div class="left-side">
@@ -80,16 +62,10 @@
     <script src="js/main.js"></script>
 
     <footer class="pie">
-      <div class="texto-pie">
-        <p>ubicacion - chacras de coria -Mendoza</p>
-      </div>
-      <div class="redes-sociales">
-        <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram"></a>
-        <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter"></a>
-        <p></p>
-      </div>
+        <div th:replace="fragments/footer::foot"></div>
+        <div th:replace="fragments/redesS::red_soc"></div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 
