--- a/src/main/resources/templates/panelAdmin.html
+++ b/src/main/resources/templates/panelAdmin.html
@@ -8,9 +8,14 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+
     <h1>Aqui deberían ir todas las funciones del admin, crear, eliminar, modificar, pasar de usuario a proveedor, hay
         que darle la logica</h1>
     </li>
+
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
@@ -23,6 +28,12 @@
             <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
         </ul>
     </li>
+
+    <footer class="pie">
+
+    </footer>
+    <script src="js/heafoo.js"></script>
+
 </body>
 
 </html>
