--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -12,6 +12,7 @@
 
 <body>
     <nav th:replace="fragments/navbar::nav"></nav>
+
     <div class="pantalla">
 
         <div class="izquierda">
@@ -19,7 +20,7 @@
             <div class="unTercio">
 
                 <div class="fotoPerfil">
-                    <img src=" " class="fotoPerfil" alt="">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="fotoPerfil" alt="">
                 </div>
 
 
@@ -48,9 +49,8 @@
                 <div class="fotoTrabajo">
 
                     <p>Imagenes de Trabajos Realizados</p>
-                    <img th:src="@{/img/qq.jpg}" class="fotoTrabRea">
-                    <img th:src="@{/img/qw.jpg}" class="fotoTrabRea">
-                    <img th:src="@{/img/tyo.jpg}" class="fotoTrabRea">
+                    <img src="https://th.bing.com/th/id/OIP.VNbxMxKtA769S4M6mghyQgHaEI?pid=ImgDet&rs=1" class="fotoTrabRea">
+                    <img src="https://th.bing.com/th/id/OIP.qU-V3d8GbJpjRrt-UvVd6QAAAA?pid=ImgDet&rs=1" class="fotoTrabRea">
 
                 </div>
 
