--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -296,14 +296,6 @@ button {
 }
 
 
-
-/*
-  .textlog{
-    margin:10px;
-    text-align: center;
-    font-size: 20px;
-    color:rgb(16, 16, 16);}*/
-
 /*Registro Proveedor*/
 
 
@@ -430,10 +422,10 @@ textarea {
 .seleb {
   display: flex;
   margin-top: 5%;
-  margin-left: 35%;
-  width: 80%;
+  margin-left: 50%;
+  width: 50%;
   border-radius: 5px;
-  height: 100%;
+  height: 200%;
 }
 
 /*  Contactar Proveedor */
@@ -460,12 +452,8 @@ textarea {
 }
 
 .fotoPerfil {
-
-  width: 33vh;
-  height: 200px;
-  background-image: url(img/perfil.jpg);
-  margin-right: 20px;
-  align-items: center;
+  width: 70%;
+  height: 70%;
 
 }
 
@@ -477,8 +465,17 @@ textarea {
 
 /* Estilo para la sección de fotos de trabajos realizados */
 .fotoTrabajo {
-  margin-top: 20px;
-  text-align: center;
+  text-align: center; 
+}
+
+.fotoTrabajo p {
+  font-weight: bold; 
+}
+
+.fotoTrabajo img {
+  width: 200px; 
+  height: auto; 
+  margin-right: 10px;
 }
 
 /* Estilo para el campo de comentario y botón de enviar */
@@ -572,6 +569,13 @@ textarea {
     margin-left: 20%;
     width: 66%;
   }
+
+  .fotoPerfil {
+
+    width: 70%;
+    height: 70%;
+  
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -592,5 +596,11 @@ textarea {
     top: 50%;
     transform: translate(0, -50%);
     display: block;
+  }
+  .fotoPerfil {
+
+    width: 70%;
+    height: 70%;
+  
   }
 }
