--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  lang="es" >
 
 <head>
     <meta charset="UTF-8">
@@ -12,27 +12,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand">
-                <img src="logos/casacasa.png" width="30" height="30" class="d-inline-block align-top">
-            </a>
-            <a class="navbar-brand" href="logos/casacasa.png"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" href="/">Inicio</a>
-                    <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                    <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
-            <a class="nav-link" href="/proveedor/registrar">RegProv</a> -->
-                    <a class="nav-link" href="/login">Login</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+
+    <nav th:replace="fragments/navbar::nav"></nav>
 
     <div class="container">
         <div class="row justify-content-center">
@@ -47,7 +28,6 @@
             <div class="col-md-8">
                 <select class="seleb" name="rubro" id="rubro" required>
                     <option class="opc" value="">Selecciona un rubro</option>
-                    <option value="">Selecciona un rubro</option>
                     <option value="Jardinero">Jardinero</option>
                     <option value="Chapista">Chapista</option>
                     <option value="Piletero">Piletero</option>
@@ -65,14 +45,11 @@
         <ul>
             <th:block th:each="proveedor : ${proveedores}">
                 <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
-                            class="card-img-top" alt="Proveedor 1">
-                        <div class="card-body">
-                            <h5 th:text="${proveedor.nombre}">nombre:</h5>
-                            <p class="card-text" th:text="${proveedor.direccion}">direccion:</p>
-                            <p class="card-text" th:text="${proveedor.honorarioHora}">honorarios por hora:</p>
-                            <p class="card-text">Cantidad de estrellas: 5</p>
+                    <div class="card" style="background-color: #000; width: 300px;">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="card-img-top" alt="Proveedor 1">
+                        <div class="card-body" >
+                            <h5 style="font-weight: bold; color: white;">Nombre:  <span class="card-text" th:text="${proveedor.nombre}"></span></h5>
+                            <h5 class="card-text" style="color: white;">Cantidad de estrellas:  5</h5>
                             <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary"
                                 style="margin:10px">Contactar</a>
                         </div>
@@ -83,19 +60,18 @@
     </div>
 
 
-    <div th:if="${#lists.isEmpty(proveedores)}">
+    <div class="row justify-content-center" th:if="${#lists.isEmpty(proveedores)}">
         <div class="col-md-4">
-            <div class="card">
+            <div class="card" style="background-color: #000; height: 62px;">
                 <div class="card-body">
-                    <p>No se encontraron proveedores para este rubro.</p>
+                    <p class="row justify-content-center" style="font-weight: bold; color: white;">No se encontraron proveedores para este rubro</p>
                 </div>
             </div>
         </div>
     </div>
-
     <br>
 
-    <div class="imagen-enmarcada">
+    <div class="imagen-enmarcada" th:if="${#lists.isEmpty(proveedores)}" >
         <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
     </div>
 
@@ -108,14 +84,8 @@
     </section>
 
     <footer class="pie">
-        <div class="texto-pie">
-            <p>ubicacion - chacras de coria -Mendoza</p>
-        </div>
-        <div class="redes-sociales">
-            <a href="https://www.facebook.com/" target="_blank"><img src="/logos/facebook.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="/logos/instagram.png" alt="Instagram"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="/logos/twitter.png" alt="Twitter"></a>
-        </div>
+        <div th:replace="fragments/footer::foot"></div>
+        <div th:replace="fragments/redesS::red_soc"></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
