--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,8 +1,6 @@
 <nav th:fragment="nav" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand">
-
-      <img th:src="@{/logos/casacasa.png}" width="30" height="30" class="d-inline-block align-top">
+    <a class="navbar-brand"> <img th:src="@{/logos/casacasa.png}" width="30" height="40" class="d-inline-block align-top">
     </a>
     <a class="navbar-brand" th:href="@{/logos/casacasa.png}"></a>
 
