--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -12,30 +12,15 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand">
-        <img src="logos/casacasa.png" width="30" height="30" class="d-inline-block align-top">
-      </a>
-      <a class="navbar-brand" href="logos/casacasa.png"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" href="/">Inicio</a>
-          <a class="nav-link" href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero">Buscar</a>
-          <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
-              <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
-          <a class="nav-link" href="/login">Login</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <nav th:replace="fragments/navbar::nav"></nav>
 
   <h1>ProSkillFinder</h1>
-  <h1>R</h1>
+  <h6 class="textRegU">¿Eres un proveedor de servicios? <br>
+    ¿Quieres llegar a más clientes y aumentar tus oportunidades de negocio?<br>
+    Entra en nuestro portal de servicios y regístrate como proveedor <br>
+    Es sencillo. Completa tu perfil y selecciona tu categoría de servicios. <br>
+  </h6>
+
   <div class="container3">
     <h1>Registro de Proveedor</h1>
     <form action="/proveedor/registro" method="POST" enctype="multipart/form-data">
@@ -93,35 +78,13 @@
       </div>
     </div>
   </section>
-  <!--- <div>
-    <a class="arriba" href="/">Ir arriba</a>
-  </div>-->
-  <button class="botonp" type="submit" id="botonr">Registrar Proveedor</button>
-  </form>
 
-  </div>
-  <section class="text-center container">
-    <div class="row mt-3">
-      <div class="divVolver">
-        <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-      </div>
-    </div>
-  </section>
-  <!--- <div>
-    <a class="arriba" href="/">Ir arriba</a>
-  </div>-->
+
 
   <footer class="pie">
-    <div class="texto-pie">
-      <p>ubicacion - chacras de coria -Mendoza</p>
-    </div>
-    <div class="redes-sociales">
-      <a href="https://www.facebook.com/" target="_blank"><img src="/logos/facebook.png" alt="Facebook"></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="/logos/instagram.png" alt="Instagram"></a>
-      <a href="https://twitter.com/" target="_blank"><img src="/logos/twitter.png" alt="Twitter"></a>
-      <p></p>
-    </div>
-  </footer>
+    <div th:replace="fragments/footer::foot"></div>
+    <div th:replace="fragments/redesS::red_soc"></div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
