--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" html lang="es">
 
-<html xmlns:th="http://www.thymeleaf.org" html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProSkillFinder</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos2.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProSkillFinder</title>
@@ -20,27 +13,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand">
-                <img src="logos/casacasa.png" width="30" height="30" class="d-inline-block align-top">
-            </a>
-            <a class="navbar-brand" href="logos/casacasa.png"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" href="/">Inicio</a>
-                    <a class="nav-link" href="/proveedor/buscarProveedorPorRubro?rubro=Jardinero">Buscar</a>
-                    <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
-            <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
-                    <a class="nav-link" href="/login">Login</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header></header>
 
     <h1>ProSkillFinder</h1>
     <h6 class="textRegU">
@@ -78,40 +51,7 @@
             </button>
         </div>
     </form>
-    <!--
-    <form class="formulario" th:action="@{/registro}" method="POST">
-        <div class="form-group my-3">
-            <h3 class="card-title">Registrate!</h3>
-        </div>
-        <div class="form-group my-3">
-            <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}">
-        </div>
-        <div class="form-group my-3">
-            <input type="email" class="form-control" name="email" placeholder="EMAIL" th:value="${email}">
-        </div>
 
-        <div class="form-group my-3">
-            <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA"
-                th:value="${password}">
-        </div>
-        <div class="form-group my-3">
-            <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA"
-                th:value="${password2}>
-        </div>
-
-        <div class="form-group my-3">
-            <input type="number" class="form-control" name="telefono" placeholder="telefono" th:value="${telefono}" />
-        </div>
-
-        <div class="form-group my-3">
-            <input type="text" class="form-control" name="direccion" placeholder="Direccion" th:value="${direccion}" />
-        </div>
-
-        <button type="submit" class="btn btn-primary mt-3 botones">
-            Registrarme
-        </button>
-    </form>
--->
 
     <section class="text-center container">
         <div class="row mt-3">
@@ -120,21 +60,12 @@
             </div>
         </div>
     </section>
-    <!--- <div>
-        <a class="arriba" href="/">Ir arriba</a>
-      </div>-->
+
 
     <footer class="pie">
-        <div class="texto-pie">
-            <p>ubicacion - chacras de coria -Mendoza</p>
-        </div>
-        <div class="redes-sociales">
-            <a href="https://www.facebook.com/" target="_blank"><img src="logos/facebook.png" alt="Facebook" /></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="logos/instagram.png" alt="Instagram" /></a>
-            <a href="https://twitter.com/" target="_blank"><img src="logos/twitter.png" alt="Twitter" /></a>
-            <p></p>
-        </div>
     </footer>
+
+    <script src="js/heafoo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
