Commit de V4, incluyendo Rama-Victor

--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -86,8 +86,8 @@
                     <div class="boton">
 
                         <a href="#">
-                            <imput type="button" class="btn btn-primary btn-block py-3"
-                                onclick="alert('el boton Enviar OT funciona')">Enviar OT</imput>
+                            <input type="button" class="btn btn-primary btn-block py-3"
+                                onclick="alert('el boton Enviar OT funciona')">Enviar OT</input>
                         </a>
                     </div>
                 </div>
