--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -29,19 +29,22 @@
                    
                     <a class="nav-link" href="/login">Login</a>
 
+                    <ul  th:if="${session.personasession != null}">
+                    
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                        sec:authorize="hasRole('USER')" th:href="@{/usuario}" > Perfil </a>
-                            
-                        
+                         > Perfil </a>                         
 
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Ver mi Perfil</a></li>
+                            <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar mi Perfil</a></li>
                             <li><hr class="dropdown-divider"></li>
 
                             <li><a class="dropdown-item" href="/logout" >Cerrar Sesión</a></li>
                         </ul>
                     </li>
+                    
+                </ul>
                 </div>
             </div>
         </div>
@@ -56,6 +59,16 @@
         </div>
     </div>
     
+    <div class="col-md-4">
+        <div class="container">
+          
+            <span
+              th:if="${session.personasession != null}"
+              th:text=" 'BIENVENIDO ' + ${ session.personasession.nombre } + ' buscá los servicios en tu cercanía ' "
+            ></span>
+          
+        </div>
+      </div>
     
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar Perfil</a></li>
@@ -128,7 +141,7 @@
     <section class="text-center container">
         <div class="row mt-3">
             <div class="divVolver">
-                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Arriba</a>
+                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
             </div>
         </div>
     </section>
