--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -4,12 +4,39 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>Orden creada</div>
-    </body>
+  <head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div>Orden creada</div>
+    <div>aca van todas las ordenes</div>
+
+    <table>
+      <h3>Listado de orden</h3>
+      <thead>
+        <tr>
+          <th scope="col">id Orden</th>
+          <th scope="col">Nombre Usuario</th>
+          <th scope="col">Nombre Proveedor</th>
+          <th scope="col">Comentario</th>
+          <th scope="col">Estado</th>
+          <th scope="col">Acciones</th>
+        </tr>
+      </thead>
+      <tbody th:each="orden : ${listaOrdenes}">
+        <th th:text="${orden.id}"></th>
+        <td th:text="${orden.usuario.nombre}"></td>
+        <td th:text="${orden.proveedor.nombre}"></td>
+        <td th:text="${orden.comentario}"></td>
+        <td th:text="${orden.estadOrden}"></td>
+        <td>
+          <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
+          <a th:href="@{/orden/aceptar/__${orden.id}__}">Aceptar cotizacion</a>
+          <a th:href="@{/orden/calificar/__${orden.id}__}">Calificar</a>
+        </td>
+      </tbody>
+    </table>
+  </body>
 </html>
