--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -427,6 +427,14 @@ textarea {
   border-radius: 5px;
   height: 200%;
 }
+.card {
+  margin: 10px;}
+
+.card-deck {
+    display: flex;
+
+}
+
 
 /*  Contactar Proveedor */
 
@@ -576,6 +584,18 @@ textarea {
     height: 70%;
   
   }
+
+  .card-deck {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.col-md-4 {
+    flex: 0 0 calc(50% - 1rem);
+    max-width: calc(50% - 1rem);
+}
+}
 }
 
 @media screen and (max-width: 991px) {
