--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand">
-                <img src="logos/casacasa.png" width="30" height="30" class="d-inline-block align-top">
+                <img th:src="@{/logos/casacasa.png}" width="30" height="30" class="d-inline-block align-top">
             </a>
-            <a class="navbar-brand" href="logos/casacasa.png"></a>
+            <a class="navbar-brand" th:href="@{/logos/casacasa.png}"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,15 +26,11 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" href="/">Inicio</a>
                     <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-                   
                     <a class="nav-link" href="/login">Login</a>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
                         sec:authorize="hasRole('USER')" th:href="@{/usuario}" > Perfil </a>
-                            
-                        
-
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Ver mi Perfil</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -45,7 +41,7 @@
                 </div>
             </div>
         </div>
-        
+
     </nav>
 
     <div class="container">
@@ -55,8 +51,6 @@
             </div>
         </div>
     </div>
-    
-    
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar Perfil</a></li>
         <li><hr class="dropdown-divider"></li>
