cuarta actualizacion orden de trabajo funcional

--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -3,7 +3,7 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
+<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
@@ -20,9 +20,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <th scope="col">id Orden</th>
                     <th scope="col">Nombre Usuario</th>
                     <th scope="col">Nombre Proveedor</th>
-                    <th scope="col">Comentario</th>
+                    <th scope="col">Descripcion del trabajo</th>
                     <th scope="col">Estado</th>
-                    <th scope="col">Acciones</th>
+                    <th th:if="${session.usuariosession != null}" scope="col">Ingresar valor de la cotizacion</th>
+                    
+                    
+                    
+                    <th sec:authorize="hasRole('PROVEEDOR')" scope="col">Acciones</th>
+                    
+                    
                     
                 </tr>
             </thead>
@@ -32,10 +38,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <td th:text="${orden.proveedor.nombre}"></td>
                 <td th:text="${orden.comentario}"></td>
                 <td th:text="${orden.estadOrden}"></td>
+                <td th:if="${session.usuariosession != null}" ><input type="text"></input><button>enviar</button></td>
                 <td> 
                     <a th:href="@{/orden/cancelar/__${orden.id}__}" >Cancelar</a>
                     <a th:href="@{/orden/aceptar/__${orden.id}__}" >Aceptar cotizacion</a>
                     <a th:href="@{/orden/calificar/__${orden.id}__}" >Calificar</a>
+                    <a th:href="@{/orden/calificar/__${orden.id}__}" >Terminar</a>
+                    
+                    
+                    
                 </td>
                 
                 
