--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,7 +12,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="/">Inicio</a>
         <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-        <a class="nav-link" href="/proveedor/vistaProveedor">Perfil</a>
+        <!--<a class="nav-link" href="/proveedor/vistaProveedor">Perfil</a>-->
         <!-- <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
         <a class="nav-link" href="/login">Login</a>
       </div>
