--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
 
 <header></header>
 
-  <h1>ProSkillFinder</h1>
+  <h1 class="textind">ProSkillFinder</h1>
 
-  <h3>
+  <h3 class="indh3">
     ¿Necesitas una mano de confianza para mantener tu hogar en óptimas condiciones?
   </h3>
 
