--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -15,7 +15,7 @@
 
     <header></header>
 
-    <h1>ProSkillFinder</h1>
+    <h1 class="textind">ProSkillFinder</h1>
     <h6 class="textRegU">
         <br>Regístrate ahora y entra en un espacio donde tus necesidades se convierten en prioridad,
         donde la excelencia es la norma, y donde tus sueños pueden hacerse realidad.
@@ -27,7 +27,7 @@
 
     <form class="formulario" th:action="@{/registro}" method="POST">
         <div class="regUsuario">
-            <h3 class="card-title">Registro Usuario</h3>
+            <h3 class="indh3">Registro Usuario</h3>
 
             <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}"><br>
 
