--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -15,9 +15,10 @@
 <header>
 </header>
 
-    <h1>ProSkillFinder</h1>
+<h1 class="textind">ProSkillFinder</h1>
 
-    <h3>Inicia Secion o Registrate segun corresponda</h3>
+<h3 class="indh3">
+    Inicia Secion o Registrate segun corresponda</h3>
     <div class="container2">
         <div class="left-side">
             <div class="box">
