Commit con Calificar

--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -14,6 +14,11 @@
             th:if="${session.personasession != null}"
             th:text=" ${session.personasession.nombre} + ' aqui podrás gestionar tu cuenta' "
           ></span>
+          <img
+            alt="foto"
+            class="logo"
+            th:src="@{/imagen/perfil/__${session.personasession.id}__}"
+          />
         </p>
       </div>
     </div>
