--- a/src/main/resources/templates/panelAdmin.html
+++ b/src/main/resources/templates/panelAdmin.html
@@ -46,17 +46,30 @@
             </tbody>
         </table>
     </div>
-    <h3>Listado Proveedores</h3>
-    <thead>
-        <tr>
-            <th scope="col">id</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Correo</th>
-            <th scope="col">Rol</th>
-            <th scope="col">Telefono</th>
-            <th scope="col">Direccion</th>
-        </tr>
-    </thead>
+    
+    <h3>Listado de Proveedores</h3>
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Correo</th>
+                <th scope="col">Rol</th>
+                <th scope="col">Teléfono</th>
+                <th scope="col">Dirección</th>
+            </tr>
+        </thead>
+       
+        <tbody th:each="proveedor : ${proveedores}">
+            <th scope="row" th:text="${proveedor.id}"></th>
+            <td th:text="${proveedor.nombre}"></td>
+            <td th:text="${proveedor.email}"></td>
+            <td th:text="${proveedor.rol}"></td>
+            <td th:text="${proveedor.telefono}"></td>
+            <td th:text="${proveedor.direccion}"></td>
+        </tbody>
+        <!-- Aquí deberías tener las filas de datos de tus proveedores -->
+    <!--</table>
     <tbody th:each="proveedor : ${proveedores}">
         <th scope="row" th:text="${proveedor.id}"></th>
         <td th:text="${proveedor.nombre}"></td>
@@ -64,7 +77,7 @@
         <td th:text="${proveedor.rol}"></td>
         <td th:text="${proveedor.telefono}"></td>
         <td th:text="${proveedor.direccion}"></td>
-    </tbody>
+    </tbody>-->
     </table>
     <div>
 
