vistas:buscar, conocenos,index, login, registo(prov y usua) funcionando, responsivas. contactarprov: falta conectar las funciones

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
   <div class="transicion">
     <ul>
       <li>
-        <h5>
+        <h5 class="h5ind">
            Nosotros estamos listos para ayudarte, contamos con una amplia gama de servicios generales.
         </h5>
         <img src="img/paisajista.jpg" alt="Albañil">
