--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -30,7 +30,7 @@
       <br />
     </h6>
     <div class="container3">
-      <h3 class="text">Registro de Proveedor</h1>
+      <h3 class="ruh3">Registro de Proveedor</h3>
       <form
         action="/proveedor/registro"
         method="POST"
