--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -27,7 +27,7 @@
 
     <form class="formulario" th:action="@{/registro}" method="POST">
         <div class="regUsuario">
-            <h3 class="indh3">Registro Usuario</h3>
+            <h3 class="ruh3">Registro Usuario</h3>
 
             <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}"><br>
 
