--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -41,12 +41,20 @@
 }
 
 /*Body*/
+
+
 body {
   background: linear-gradient(90deg, rgb(255, 239, 122) 0%, rgb(229, 113, 5) 100%);
   ;
 }
 
+
+
+
 /*index*/
+
+
+
 .textind{
   margin-top: 15px;
   text-align: center;
@@ -55,7 +63,6 @@ body {
 .indh3 {
   margin-top: 30px;
   text-align: center;
-
 }
 
 .transicion,
@@ -67,9 +74,7 @@ body {
   margin: 30px auto;
   overflow: hidden;
   border-radius: 30px;
-  border: 5px solid orange
-    /*rgb(255, 215, 0)*/
-  ;
+  border: 5px solid orange;
 }
 
 .transicion ul,
@@ -102,6 +107,8 @@ body {
   top: 50%;
   left: 15%;
   right: 15%;
+
+  
 }
 
 @keyframes slide {
@@ -174,6 +181,8 @@ body {
   color: red;
 }
 
+
+
 /* conocenos*/
 
 
@@ -184,6 +193,7 @@ body {
   margin-left: 15%;
   margin-right: 15%;
   margin-bottom: 10%;
+  text-align: center;
 
 }
 
@@ -191,6 +201,7 @@ body {
   font-size: 23px;
   margin-bottom: 5%;
   margin-top: 5%;
+  text-align: center;
 }
 
 .subtit {
@@ -359,21 +370,20 @@ textarea {
   margin-top: 4%;
   text-align: justify;
   background-color: #000;
+  height: auto;
 }
 
-.regUsuario h1 {
-  margin-top: 10%;
-  margin-bottom: 5%;
-  text-align: center;
-  color: white;
-}
 
 .regUsuario button {
   margin-left: 35%;
   margin-bottom: 5%;
 
 }
-
+.ruh3{
+  margin-top: 15px;
+  color: white;
+  text-align: center;
+}
 .regUsuario input {
   margin-left: 10%;
   width: 80%;
@@ -388,6 +398,8 @@ textarea {
 }
 
 /*del buscador*/
+
+
 .imagen-enmarcada {
   text-align: center;
   border: 2px solid orange;
@@ -463,7 +475,81 @@ margin: 3%;
 
 /*  Contactar Proveedor */
 
+.pantalla {
+  display: flex;
+  height: auto;
 
+}
+.izquiercon {
+  flex: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 5%;
+
+}
+.derecha {
+  flex: 2;
+  padding: 20px
+
+}
+.izqAb{
+  margin-top: 20%;
+  border: 2px solid orange;
+  align-items: center;
+  margin-left: 80%;
+  width: 100%;
+  border-radius: 5px;
+
+}
+.comen{
+    width: 100%;
+    padding: 5px;
+    border: 1px solid orange;
+    margin-bottom: 2px;
+    border-radius: 5px;
+  }
+  
+  .enviarComentario {
+    display: block;
+    background: linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
+    color: #fff;
+    padding: 5px;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    margin-left: 40%;
+  }
+  
+
+.encabezadoCP {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.texCP {
+  margin: 20px;
+  padding: 10px;
+  text-align: center;
+
+}
+
+.textoOT {
+  text-align: center;
+  border: 3px solid orange;
+  width: 60%;
+  padding: 5px;
+  box-sizing: border-box;/
+}
+
+
+
+
+
+   
 
 /* Media query para pantallas más pequeñas */
 @media screen and (max-width: 768px) {
@@ -534,8 +620,17 @@ margin: 3%;
   margin-left: 15%;
   width: 70%;
 }
+.izqAb{
+  margin-top: 80%;
+  border: 2px solid orange;
+  align-items: center;
+  margin-left: 5%;
+  width: 150%;
+  border-radius: 5px;
 
-
+}
+.enviarComentario {
+  width: 30%;
 }
 
 @media screen and (max-width: 991px) {
