--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -1,9 +1,11 @@
-<html xmlns:th="http://www.thymeleaf.org" html lang="es">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>ProSkillFinder</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/estilos2.css}">
@@ -13,77 +15,86 @@
 <body>
 
     <nav th:replace="fragments/navbar::nav"></nav>
-    <h1>ENVIALE UN MENSAJE A TU PROVEEDOR</h1>
-    <div class="container2">
 
-                <ul>
-                    <th:block th:each="proveedor : ${proveedores}">
-                        <div class="col-md-4">
-                            <div class="card1" style="background-color: #000; width: 300px;">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="card-img-top" alt="Proveedor 1">
-                                <div class="card-body" >
-                                    <h5 style="font-weight: bold; color: white;">Nombre:  <span class="card-text" th:text="${proveedor.nombre}"></span></h5>
-                                    <h5 style="color: white;">Direccion:  <span class="card-text" th:text="${proveedor.direccion}"></span></h5>
-                                    <h5 style="color: white;">Honorarios por hora:  <span class="card-text" th:text="${proveedor.honorarioHora}"></span></h5>
-                                    <h5 class="card-text" style="color: white;">Cantidad de estrellas:  5</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </th:block>
-                </ul>
+    <h1 class="titulo1">ENVIALE UN MENSAJE A TU PROVEEDOR</h1>
+    <div class="pantalla">
 
-                <div class="fotoTrabajo">
+            <div class="izquiercon">
 
-                    <p>Imagenes de Trabajos Realizados</p>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="fotoTrabRea">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="fotoTrabRea">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="fotoTrabRea">
-
-
-
-
-                <div class="card" style="background-color: #000; width: 683px;">
-                    <input type="text" class="form-control" placeholder="Ingresa tu comentario" name="comentario" required="required">
-                    <br>
-                    <div class="enviarComentario">
-                        <button type="button" class="btn btn-primary btn-block py-3" onclick="alert('el boton enviar funciona')">Enviar</button>
-                    </div>
+                <div class="fotoPerfil">
+                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="fotoPerfil" alt="">
                 </div>
-                </div>
-        </div>
-    <div class="container3">
 
-                <h6 class="texCP">Ingresa tu orden de trabajo para el Proveedor, por favor SER CLARO CON TU PETICION para que no sea denegada!</h6>
+
+                <div class="InfoProv">
+
+                    <form th:action="@{/orden/crearOrden}" method="POST">
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre: <span th:text="${proveedor.nombre}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion: <span
+                         th:text="${proveedor.direccion}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Honorarios por hora: <span
+                         th:text="${proveedor.honorarioHora}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Telefono: <span
+                         th:text="${proveedor.telefono}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Presentacion: <span
+                         th:text="${proveedor.presentacion}"></span></li>
+                    </form>
+
+                </div>
+
+
+
+                <div class="izqAb">
+
+                    <p><input type="text" class="comen" placeholder="comentario" name="comentario"
+                        required="required" /></p>
+                    <a href="#">
+                    <imput type="button" class="enviarComentario" onclick="alert('el boton enviar funciona')" value="">
+                        Enviar</button>
+                    </a>
+
+                </div>
+
+
+            </div>
+
+        <div class="derecha">
+
+            <div class="encabezadoCP">
+
+                <h6 class="texCP">INGRESA TU ORDEN DE TRABAJO PARA EL PROVEEDOR, POR FAVOR SER CLARO CON TU PETICION
+                    PARA QUE NO SEA DENEGADA! </h6>
+
                 <div class="textoOT">
-                    <div class="card3" style="background-color: #000; width: 1600px;">
-                        <h4 style="color: white;">Orden de trabajo</h4>
-                        <input type="text" class="form-control p-4" placeholder="Ingresa tu orden de trabajo" name="comentario" required="required" >
-                        <br>
-                        <div class="boton">
-                            <button type="button" class="btn btn-primary btn-block py-3" onclick="alert('el boton Enviar OT funciona')">Enviar</button>
-                        </div>
+
+                    <h4>ORDEN DE TRABAJO</h4>
+                    <p><input type="text" class="form-control p-4" placeholder="comentario" name="comentario"
+                            required="required"></p>
+
+                    <div class="boton">
+
+                        <a href="#">
+                            <imput type="button" class="btn btn-primary btn-block py-3"
+                                onclick="alert('el boton Enviar OT funciona')">Enviar OT</imput>
+                        </a>
                     </div>
                 </div>
+
+            </div>
+
+
+        </div>
 
     </div>
-
-    <section class="text-center container">
-        <div class="row mt-3">
-            <div class="divVolver">
-                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-            </div>
-        </div>
-      </section>
-
-
     <footer class="pie">
         <div th:replace="fragments/footer::foot"></div>
         <div th:replace="fragments/redesS::red_soc"></div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
 
 </html>
+
+ 
